[package]
name = "leptos-tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.6", features = ["csr", "nightly"] }
leptos-use = { version = "0.16.2", default-features = false, features = ["use_event_listener"]}
reactive_stores = "0.2.5"
rand = "0.9.2"
getrandom = {version = "0.3", features=["wasm_js"]}


